Changed styling on index/base.html to correct layout issues

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,16 +1,28 @@
-html {
+
+/* from https://stackoverflow.com/questions/4617872/white-space-showing-up-on-right-side-of-page-when-background-image-should-extend */
+html,body
+{
+    width: 100%;
     height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+    
+}
+
+.row {
+    margin-left: 0;
+    margin-right: 0;
 }
 
 body {
-    display: flex;
+    display: flex; 
     flex-direction: column;
-    /* height: 10000px; */
     font-family: 'Assistant', sans-serif;
 }
 
 .content {
-    flex: 1 0 auto;
+    flex: 1 0 auto; 
    
 }
 
@@ -434,7 +446,7 @@ a:hover {
 
 
 /* fixed top navbar only on medium and up */
-@media (min-width: 992px) {
+/* @media (min-width: 992px) {
     .fixed-top-desktop-only {
         position: fixed;
         top: 0;
@@ -446,10 +458,10 @@ a:hover {
     .header-container {
         padding-top: 164px;
     }
-}
+} */
 
 /* pad the top a bit when navbar is collapsed on mobile */
-@media (max-width: 991px) {
+/* @media (max-width: 991px) {
     .header-container {
         padding-top: 116px;
     }
@@ -457,7 +469,7 @@ a:hover {
     body {
         height: calc(100vh - 116px);
     }
-}
+} */
 
 
 
@@ -488,7 +500,7 @@ a:hover {
 
 
 /* botstrap template */
-.bd-placeholder-img {
+/* .bd-placeholder-img {
     font-size: 1.125rem;
     text-anchor: middle;
     -webkit-user-select: none;
@@ -500,6 +512,6 @@ a:hover {
     .bd-placeholder-img-lg {
       font-size: 3.5rem;
     }
-  }
+  } */
 
 
